@@ -5,39 +5,39 @@ import com.yanggu.metric_calculate.core2.aggregate_function.numeric.SumAggregate
 import com.yanggu.metric_calculate.core2.aggregate_function.annotation.MapType;
 import com.yanggu.metric_calculate.core2.aggregate_function.annotation.MergeType;
 import com.yanggu.metric_calculate.core2.field_process.multi_field_distinct.MultiFieldDistinctKey;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
-public class SortValueReturnKeyMapAggregateFunctionTest {
+class SortValueReturnKeyMapAggregateFunctionTest {
 
     @Test
-    public void testMergeType() {
+    void testMergeType() {
         MergeType mergeType = SortValueReturnKeyMapAggregateFunction.class.getAnnotation(MergeType.class);
         assertEquals("SORTVALUERETURNKEYMAP", mergeType.value());
     }
 
     @Test
-    public void testMapType() {
+    void testMapType() {
         MapType mapType = SortValueReturnKeyMapAggregateFunction.class.getAnnotation(MapType.class);
         assertNotNull(mapType);
     }
 
     @Test
-    public void testConstructor() {
+    void testConstructor() {
         SortValueReturnKeyMapAggregateFunction<MultiFieldDistinctKey, Double, Double, Double> aggregateFunction = new SortValueReturnKeyMapAggregateFunction<>();
         assertNotNull(aggregateFunction);
         assertNull(aggregateFunction.getValueAggregateFunction());
         assertTrue(aggregateFunction.getAsc());
-        assertEquals(new Integer(10), aggregateFunction.getLimit());
+        assertEquals(Integer.valueOf(10), aggregateFunction.getLimit());
     }
 
     @Test
-    public void getResult1() {
+    void getResult1() {
         SortValueReturnKeyMapAggregateFunction<String, Double, Double, Double> aggregateFunction = new SortValueReturnKeyMapAggregateFunction<>();
         aggregateFunction.setValueAggregateFunction(new SumAggregateFunction<>());
         //升序取4个
